--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          dockerfile: ./docker/php/Dockerfile
+          file: ./docker/php/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
@@ -63,7 +63,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          dockerfile: ./docker/nginx/Dockerfile
+          file: ./docker/nginx/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
