--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           context: .
           file: ./docker/php/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             ghcr.io/yoganovvaindra/wedding-api-php:${{ steps.slug.outputs.SHORT_SHA }}
