--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app:
-    image: your-custom-php-image:tag
+    image: ghcr.io/yoganovvaindra/wedding-api-php:latest
     container_name: undangan-app
     restart: unless-stopped
     depends_on:
@@ -32,7 +32,7 @@ services:
 #       - undangan
 
   nginx:
-    image: your-custom-nginx-image:tag
+    image: ghcr.io/yoganovvaindra/wedding-api-nginx:latest
     container_name: undangan-nginx
     ports:
       - 8080:80
@@ -40,6 +40,16 @@ services:
       - undangan
     depends_on:
       - app
+    environment:
+      BASEURL: http://localhost:8080
+      DB_CONNECTION: mysql
+      DB_HOST: mariadb
+      DB_PORT: 3306
+      DB_DATABASE: wedding
+      DB_USERNAME: root
+      DB_PASSWORD: 
+      TIMEZONE: Asia/Jakarta
+    restart: unless-stopped
 
 # volumes:
 #   postgres_data:
