--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,10 +5,15 @@ RUN apt-get update --fix-missing
 RUN apt-get install -y zip unzip libonig-dev libicu-dev
 RUN apt-get install -y libzip-dev libpq-dev
 RUN apt-get install -y build-essential libssl-dev zlib1g-dev
+# Add MariaDB client
+RUN apt-get install -y mariadb-client
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-install pdo zip pdo_pgsql pgsql opcache
-RUN docker-php-ext-enable pdo zip pdo_pgsql pgsql opcache
+# RUN docker-php-ext-install pdo zip pdo_pgsql pgsql opcache
+# RUN docker-php-ext-enable pdo zip pdo_pgsql pgsql opcache
+# Change PostgreSQL extensions to MariaDB
+RUN docker-php-ext-install pdo zip pdo_mysql mysqli opcache
+RUN docker-php-ext-enable pdo zip pdo_mysql mysqli opcache
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
