--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 APP_NAME=Wedding-API
 APP_KEY=
-BASEURL=http://localhost:8000/
+BASEURL=http://10.1.1.2:8081/
 DEBUG=false
 LOG=false
 
 DB_DRIV=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariadb
 DB_PORT=3306
-DB_NAME=kamu
+DB_NAME=wedding
 DB_USER=root
-DB_PASS=
+DB_PASS=abogoboga
 
 TIMEZONE=Asia/Jakarta
+JWT_KEY=verysecretkey
